# moc-docs-bot

./: .gitignore  CLAUDE.md  STREAM_01_IMPLEMENTATION_SUMMARY.md  STREAM_01_README.md  STREAM_09_COMPLETION_SUMMARY.md  STREAM_15_COMPLETION_SUMMARY.md  docker-compose.yml
Implementation_Plan/: 00_Overview.md  01_Shared_Contracts.md  17_Dependency_Graph.md  18_NFR_Checklist.md  19_Execution_and_Structure.md  README.md  Stream_01_Infrastructure.md  Stream_02_Database.md  Stream_03_API_Gateway.md  Stream_04_RAG_Pipeline.md  Stream_05_LLM_Service.md  Stream_06_Speech.md  Stream_07_OCR.md  Stream_08_Chat_Widget.md  Stream_09_Admin_Dashboard.md  Stream_10_Shared_Libs.md  Stream_11_Search_Page.md  Stream_12_Data_Ingestion.md  Stream_13_Translation.md  Stream_14_Model_Training.md  Stream_15_Testing.md  Stream_16_Documentation.md
shared/: CLAUDE.md  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  pyproject.toml
shared/src/rag_shared/: __init__.py  config.py
shared/src/rag_shared/clients/: __init__.py  base_client.py  milvus_client.py  minio_client.py  postgres_client.py  redis_client.py  s3_client.py
shared/src/rag_shared/hindi/: __init__.py  normalizer.py  stopwords.py  tokenizer.py
shared/src/rag_shared/middleware/: __init__.py  logging.py  metrics.py
shared/src/rag_shared/models/: __init__.py  chat.py  document.py  errors.py  health.py  language.py  pagination.py  search.py
shared/src/rag_shared/security/: __init__.py  encryption.py  sanitizer.py
shared/tests/: __init__.py  test_encryption.py  test_hindi_normalizer.py  test_language.py
(+611 files in other folders)
