[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-shared"
version = "1.0.0"
description = "Shared libraries for RAG-based Hindi QA system (Ministry of Culture)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RAG QA Team", email = "dev@example.com"}
]
license = {text = "Apache-2.0"}

dependencies = [
    "python-jose[cryptography]==3.3.*",
    "pydantic==2.10.*",
    "pydantic-settings==2.7.*",
    "httpx==0.28.*",
    "structlog==24.4.*",
    "prometheus-client==0.21.*",
    "redis==5.2.*",
    "asyncpg==0.30.*",
    "sqlalchemy[asyncio]==2.0.*",
    "pymilvus==2.4.*",
    "boto3>=1.35,<2",
    "cryptography>=42.0.0",
    "python-multipart==0.0.18",
    "passlib[bcrypt]==1.7.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.setuptools]
packages = ["rag_shared"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
rag_shared = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "C", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
